Update hero section

--- a/theme/common/classes.scss
+++ b/theme/common/classes.scss
@@ -115,7 +115,7 @@
 
 	&--hero {
 		position: relative;
-		background: rgba(85, 189, 195, 1) url("/media/11.jpg");
+		background: rgba(85, 189, 195, 1) url("/media/11.avif");
 		background-position: bottom center;
 		background-size: cover;
 
