--- a/theme/ui.css
+++ b/theme/ui.css
@@ -6,4 +6,8 @@
 	--ui-primary: var(--color-main);
 	--ui-bg: var(--color-light);
 	--ui-text-highlighted: var(--color-title);
+	--font-display: "Exo 2", "sans-serif";
+}
+button {
+	font: menu;
 }
