--- a/theme/common/classes.scss
+++ b/theme/common/classes.scss
@@ -444,7 +444,7 @@
 		outline: none;
 		border: 2px solid var(--color-border-light);
 		border-radius: var(--border-radius);
-		padding: 8px 48px 8px 8px;
+		padding: 8px;
 		width: 100%;
 		min-height: 48px;
 		max-width: 100%;
