--- a/theme/common/classes.scss
+++ b/theme/common/classes.scss
@@ -86,15 +86,6 @@
 	@media screen and (min-width: 1200px) { white-space: nowrap; }
 }
 
-.h-links {
-	display: flex;
-	margin: 24px 0;
-
-	.link {
-		margin: auto;
-	}
-}
-
 .section {
 	padding: 24px;
 
@@ -370,28 +361,6 @@
 	height: 1px;
 }
 
-.tabs {
-	&__list {
-		display: flex;
-		flex-wrap: wrap;
-		margin-top: 0;
-		padding-left: 0;
-	}
-
-	&__item { flex: 1 1 auto; }
-
-	&__link {
-		display: block;
-		border-bottom: 1px solid var(--color-border-light);
-		padding: 16px;
-		text-align: center;
-
-		&.active {
-			border-color: var(--color-border);
-		}
-	}
-}
-
 .form {
 	&__footer {
 		text-align: right;
@@ -438,8 +407,7 @@
 		color: var(--color-modal);
 	}
 
-	&__input,
-	.vdp-datepicker__input {
+	&__input {
 		outline: none;
 		border: 2px solid var(--color-border-light);
 		border-radius: var(--border-radius);
@@ -473,8 +441,7 @@
 	&:last-child { margin-bottom: 0; }
 
 	&.invalid {
-		.input-text__input,
-		.vdp-datepicker__input {
+		.input-text__input {
 			border-color: var(--color-error);
 
 			&:focus { border-color: var(--color--modal); }
@@ -488,8 +455,7 @@
 	}
 
 	&.valid {
-		.input-text__input,
-		.vdp-datepicker__input {
+		.input-text__input {
 			border-color: var(--color-border);
 			background-color: rgb(232, 240, 254);
 		}
@@ -509,22 +475,3 @@
 
 	@media screen and (min-width: var(--break_xs)) { margin-bottom: 24px; }
 }
-
-.form__success {
-	b { display: block; }
-	&-inner { text-align: center; }
-	&-title { margin-top: 0; }
-	&-iconWrapper { margin: 16px; }
-	&-list-item { margin-bottom: 8px; }
-
-	&-icon {
-		width: 150px;
-		height: 150px;
-	}
-}
-
-.page-enter-active,
-.page-leave-active { transition: opacity 0.2s; }
-
-.page-enter,
-.page-leave-active { opacity: 0; }
